fix(ekilex): add wrapping, allow inserting without selection

--- a/ekilex-app/src/main/resources/scss/ekilex-editor.scss
+++ b/ekilex-app/src/main/resources/scss/ekilex-editor.scss
@@ -72,22 +72,21 @@
 }
 
 .ql-snow.ql-toolbar {
-  button[data-format],
-  button[data-insert] {
+  & > div {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2px;
+  }
+  button[data-format] {
     background-size: 18px;
     width: 36px;
     height: 24px;
     background-repeat: no-repeat;
     background-position: center;
     float: none;
-    font-size: 1rem;
 
     &.ql-active {
       box-shadow: inset 1px 1px 6px var(--color-gray-200);
-    }
-
-    &:not(:first-child) {
-      margin-left: 2px;
     }
 
     &:disabled {
@@ -95,6 +94,12 @@
       cursor: not-allowed;
       pointer-events: none;
     }
+  }
+
+  button[data-insert] {
+    width: 24px;
+    height: 24px;
+    font-size: 1rem;
   }
 
   button[data-format="bold"] {
@@ -138,7 +143,7 @@
   }
 
   button[data-format="eki-media"] {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     // Currently using FontAwesome, image would be in this form:
@@ -152,7 +157,7 @@
   }
 
   button[data-format="remove-media"] {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     // Currently using FontAwesome, image would be in this form:
@@ -166,7 +171,7 @@
   }
 
   button[data-format="undo"] {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     &:after {
@@ -178,7 +183,7 @@
   }
 
   button[data-format="redo"] {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     &:after {
@@ -190,7 +195,7 @@
   }
 
   button[data-format="source"] {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     &:after {
@@ -202,7 +207,7 @@
   }
 
   button[data-format="remove-format"] {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     &:after {
